// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Link Disabled 1`] = `
<div
  dir="ltr"
>
  <a
    aria-disabled={true}
    className="fd-link is-disabled"
    href="#"
  >
    Disabled
  </a>
</div>
`;

exports[`Storyshots Component API/Link Primary 1`] = `
<div
  dir="ltr"
>
  <a
    className="fd-link"
    href="#"
  >
    Default
  </a>
</div>
`;
